# python-performance

./: .gitignore  LICENSE  README.md  asv.conf.json  performance.ipynb  pyproject.toml  requirements.txt
.asv/results/avarar1986-desktop/: machine.json
benchmarks/: benchmarks.py
python_performance/: main.py  timeit_series.py
